--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,48 +1,72 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+  <div class="container">
+    <a class="navbar-brand" href="#">Dating App</a>
 
-    <div class="container">
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarCollapse"
+      aria-controls="navbarCollapse"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-      <a class="navbar-brand" href="#">Dating App</a>
+    <div class="collapse navbar-collapse" id="navbarCollapse">
+      <ul class="navbar-nav ml-4 mr-auto mb-2 mb-md-0" *ngIf="loggedIn">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Matches</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Lists</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Messages</a>
+        </li>
 
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+        <li class="nav-item">
+          <a class="nav-link" href="#" (click)="logout()">Logout</a>
+        </li>
 
-      <div class="collapse navbar-collapse" id="navbarCollapse">
+      </ul>
 
-        <ul class="navbar-nav ml-4 mr-auto mb-2 mb-md-0">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Matches</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Lists</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Messages</a>
-          </li>
-        </ul>
-
-        <form #loginForm="ngForm" class="form-inline ml-2 mt-md-0" (ngSubmit)="login()" autocomplete="off">
-
-          <input 
-          name="usernames"
-          [(ngModel)]="model.username"
-          class="form-control ml-sm-2" 
-          type="text" 
-          placeholder="Username">
-
-          <input
-          name="password"
-          [(ngModel)]="model.password" 
-          class="form-control ml-sm-2" 
-          type="password" 
-          placeholder="Password">      
-
-          <button class="btn btn-outline-success ml-2 my-sm-0"  type="submit">Login</button>
-        </form>
-
+      <div class="dropdown" *ngIf="loggedIn" dropdown>
+        <a class="dropdown-toggle text-light" dropdownToggle>Welcome user</a>
+        <div class="dropdown-menu mt-3" *dropdownMenu>
+          <a href="" class="dropdown-item">Edit profile</a>
+          <div class="dropdown-divider"></div>
+          <a href="" class="dropdown-item" (click)="logout()">Logout</a>
+        </div>
       </div>
 
-    </div>
+      <form *ngIf="!loggedIn"
+        #loginForm="ngForm"
+        class="form-inline ml-auto mt-md-0"
+        (ngSubmit)="login()"
+        autocomplete="off"
+      >
+        <input
+          name="usernames"
+          [(ngModel)]="model.username"
+          class="form-control ml-sm-2"
+          type="text"
+          placeholder="Username"
+        />
 
-  </nav>
+        <input
+          name="password"
+          [(ngModel)]="model.password"
+          class="form-control ml-sm-2"
+          type="password"
+          placeholder="Password"
+        />
+
+        <button class="btn btn-outline-success ml-2 my-sm-0" type="submit">
+          Login
+        </button>
+      </form>
+    </div>
+  </div>
+</nav>
