--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -15,7 +15,7 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarCollapse">
-      <ul class="navbar-nav ml-4 mr-auto mb-2 mb-md-0" *ngIf="loggedIn">
+      <ul class="navbar-nav ml-4 mr-auto mb-2 mb-md-0" *ngIf="accountService.currentUser$ | async">
         <li class="nav-item">
           <a class="nav-link" href="#">Matches</a>
         </li>
@@ -26,13 +26,9 @@
           <a class="nav-link" href="#">Messages</a>
         </li>
 
-        <li class="nav-item">
-          <a class="nav-link" href="#" (click)="logout()">Logout</a>
-        </li>
-
       </ul>
 
-      <div class="dropdown" *ngIf="loggedIn" dropdown>
+      <div class="dropdown" *ngIf="accountService.currentUser$ | async" dropdown>
         <a class="dropdown-toggle text-light" dropdownToggle>Welcome user</a>
         <div class="dropdown-menu mt-3" *dropdownMenu>
           <a href="" class="dropdown-item">Edit profile</a>
@@ -41,7 +37,7 @@
         </div>
       </div>
 
-      <form *ngIf="!loggedIn"
+      <form *ngIf="(accountService.currentUser$ | async) === null"
         #loginForm="ngForm"
         class="form-inline ml-auto mt-md-0"
         (ngSubmit)="login()"
