--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -25,7 +25,7 @@
 
             <div class="col-4">
 
-                <app-register></app-register>
+                <app-register (cancelRegister)="cancelRegisterMode($event)"></app-register>
 
             </div>
 
