--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -9,8 +9,8 @@
 
         <div class="text-center">
 
-            <button (click)="registerToggle()" class="btn btn-primary btn-lg mr-2">Register</button>
-            <button class="btn btn-info btn-lg">Learn more</button>
+            <button (click)="registerToggle()" class="btn btn-primary btn-md mr-2">Register</button>
+            <button class="btn btn-info btn-md">Learn more</button>
 
         </div>
     
